# antares-rpc-client

./: .gitignore  Cargo.toml  flake.nix  package.nix
src/: git_cred.rs  main.rs  send.rs  shell.rs
