[package]
name = "antares-rpc-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = { version = "3.5.0" }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.4"
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["debug"] }
tracing = "0.1.41"
